<menu xmlns:android="http://schemas.android.com/apk/res/android">
	
    <group android:checkableBehavior="single">
		<item
			android:icon="@drawable/ic_from_gallery"
			android:id="@+id/main_item1"
			android:title="@string/galeria"/>
		<item
			android:icon="@drawable/ic_lock"
			android:id="@+id/main_item2"
			android:title="@string/bloquear_apps"/>
		<item
			android:icon="@drawable/ic_config"
			android:id="@+id/item3"
			android:title="@string/configuracoes"/>
    </group>
	<item android:title="@string/comunicar">
		<menu>
			<item
				android:id="@+id/item_4"
				android:icon="@drawable/ic_share"
				android:title="@string/compartilhar" />
			<item 
				android:id="@+id/item_5"
				android:icon="@drawable/ic_email"
				android:title="@string/entre_em_contato"/>
		</menu>
	</item>
</menu>
