<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2023 Jefferson Calheiros


 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        
        <item
            android:icon="@drawable/ic_folder_image"
            android:id="@+id/main_item1"
            android:title="@string/galeria"/>
        <item
            android:icon="@drawable/ic_shield_lock"
            android:id="@+id/main_item2"
            android:title="@string/bloquear_apps"/>
        <item
            android:icon="@drawable/ic_config"
            android:id="@+id/item3"
            android:title="@string/configuracoes"/>
    </group>
</menu>
