<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2023 Jefferson Calheiros


 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_marginStart="16dp"
	android:layout_marginEnd="16dp"
	android:gravity="center"
	android:layout_height="wrap_content">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="14sp"
        android:gravity="center"
        android:textColor="?commonColorLight"
        android:text="@string/codigo_calculadora_mensagem_1"/>

	<LinearLayout
		android:orientation="horizontal"
		android:paddingVertical="8dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:gravity="center"
            android:layout_marginEnd="16dp"
			android:layout_height="wrap_content">

			<TextView
				android:textSize="12sp"
                android:layout_margin="2dp"
                android:text="@string/antes"
                android:textColor="?commonColorDark"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"/>

			<ImageView
                android:src="@mipmap/ic_launcher"
				android:layout_width="36dp"
				android:layout_height="36dp"/>

		</LinearLayout>

		<LinearLayout
			android:orientation="vertical"
			android:gravity="center"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp">

			<TextView
				android:textSize="12sp"
                android:layout_margin="2dp"
				android:text="@string/depois"
                android:textColor="?commonColorDark"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>

			<ImageView
                android:src="@mipmap/ic_calculator"
				android:layout_width="36dp"
				android:layout_height="36dp"/>

		</LinearLayout>

	</LinearLayout>

	<TextView
        android:text="@string/codigo_calculadora_mensagem_2"
		android:textSize="14sp"
        android:gravity="center"
        android:textColor="?commonColorLight"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

</LinearLayout>

