<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:fitsSystemWindows="true"
        android:id="@+id/tab_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            app:contentScrim="?colorPrimary"
            app:expandedTitleGravity="center_vertical"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <LinearLayout
                android:id="@+id/custom_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7">

                <!--CUSTOM LAYOUT HERE-->
                <com.jefferson.application.br.view.RoundedImageView
                    app:layout_collapseMode="parallax"
                    android:layout_marginTop="20dp"
                    android:scaleType="centerCrop"
                    android:layout_width="85dp"
                    android:id="@+id/thumbnail_image_view"
                    android:layout_height="85dp"
                    android:contentDescription="@string/album_thumbnail" />

                <TextView
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/album_name_label"
                    android:textSize="22sp"/>

                <TextView
                    android:textColor="@color/white"
                    android:alpha="0.7"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_view_item_count"
                    android:textStyle="normal"
                    android:textSize="15sp"/>
            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                app:layout_collapseMode="pin"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="1dp"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/view_album_fab_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/descricao_botao_adicionar"
        android:src="@drawable/ic_plus"
        app:backgroundTint="?colorAccent"
        app:layout_anchor="@id/my_recycler_view"
        app:layout_anchorGravity="end|bottom|end"
        app:shapeAppearanceOverlay="@style/RoundSquareShapeAppearance"
        app:tint="@color/white" />
<!--EMPTY LAYOUT-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tab_appbar">

        <LinearLayout
            android:id="@+id/view_album_empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:alpha="0.7"
            android:orientation="vertical"
            android:visibility="gone"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_folder"
                android:gravity="center"
                app:tint="?commonColorDark"
                tools:ignore="ContentDescription,HardcodedText" />

            <TextView
                android:id="@+id/emptyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/album_vazio_titulo"
                android:textColor="?commonColorDark"
                android:textStyle="bold"
                android:textSize="18sp" />
        </LinearLayout>

        <include layout="@layout/options_album_layout" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
